Attempt to fix back overlay error on Mobile

--- a/css/front.css
+++ b/css/front.css
@@ -1,12 +1,12 @@
 body {
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: rgba(0, 0, 0, 0.9);
-    position: absolute; 
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    margin: 0;
+    /* position: absolute;  */
+    top: 0%;
+    bottom: 0%;
+    right: 0%;
+    left: 0%;
+    margin: 0%;
 }
 #fullscreen {
     z-index: -999;
